Checkout Management App/objects/Invoice__c.object
<CustomObject>
    <description>Contains billing and payment information for a subscription for a specific time period. For example, the total amount owed by the customer.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attempts__c</fullName>
        <description>Number of payment attempts made for this invoice</description>
        <label>Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargeVAT__c</fullName>
        <description>Flag to indicate that the subscription invoices should include VAT</description>
        <formula>Subscription__r.IsChargeVAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge VAT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the invoice is still trying to collect payment</description>
        <label>Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountPercentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_Off__c</fullName>
        <label>Discount Amount Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End of the usage period during which invoice items were added to this invoice</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndingBalance__c</fullName>
        <label>Ending Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsPaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not payment was successfully collected for this invoice</description>
        <label>Paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start of the usage period during which invoice items were added to this invoice.</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartingBalance__c</fullName>
        <label>Starting Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StripeInvoiceIdUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Stripe Invoice Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StripeInvoiceId__c</fullName>
        <externalId>true</externalId>
        <label>Stripe Invoice Id (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The subscription that this invoice was prepared for, if any.</description>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VATNumber__c</fullName>
        <description>VAT Number of the invoice&apos;s subscription.</description>
        <formula>Subscription__r.VATNumber__c</formula>
        <label>VAT Number</label>
        <type>Text</type>
    </fields>
    <label>Checkout Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Amount__c</columns>
        <columns>Attempts__c</columns>
        <columns>EndDate__c</columns>
        <columns>IsPaid__c</columns>
        <columns>Subscription__c</columns>
        <columns>Transaction__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Checkout Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>